force-app/main/default/objects/Leave_Balance_Transaction__c/Leave_Balance_Transaction__c.object-meta.xml
<CustomObject>
    <label>Leave Balance Transaction</label>
    <pluralLabel>Leave Balance Transactions</pluralLabel>
    <nameField>
        <label>Balance Transaction Number</label>
        <type>AutoNumber</type>
        <displayFormat>LBT-{0000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>