force-app/main/default/objects/Leave_Balance_Transaction__c/fields/Business_Date__c.field-meta.xml
<CustomField>
    <fullName>Business_Date__c</fullName>
    <label>Business Date</label>
    <type>Date</type>
</CustomField>