force-app/main/default/objects/Leave_Balance_Transaction__c/fields/Leave_Balance_Line__c.field-meta.xml
<CustomField>
    <fullName>Leave_Balance_Line__c</fullName>
    <label>Leave Balance Line</label>
    <referenceTo>Leave_Balance_Line__c</referenceTo>
    <relationshipLabel>Leave Balance Transactions</relationshipLabel>
    <relationshipName>Leave_Balance_Transactions</relationshipName>
    <type>MasterDetail</type>
</CustomField>