force-app/main/default/objects/Leave_Balance_Transaction__c/fields/Leave_Request__c.field-meta.xml
<CustomField>
    <fullName>Leave_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leave Request</label>
    <referenceTo>Leave_Request__c</referenceTo>
    <relationshipLabel>Leave Balance Transactions</relationshipLabel>
    <relationshipName>Leave_Balance_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>