force-app/main/default/objects/Leave_Balance_Transaction__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Grant</fullName>
                <default>true</default>
                <label>Grant</label>
            </value>
            <value>
                <fullName>Reserve</fullName>
            </value>
            <value>
                <fullName>Consume</fullName>
            </value>
            <value>
                <fullName>Release</fullName>
            </value>
            <value>
                <fullName>Carryover</fullName>
            </value>
            <value>
                <fullName>Expire</fullName>
            </value>
            <value>
                <fullName>Reset</fullName>
            </value>
            <value>
                <fullName>Manual_Adjust</fullName>
                <label>Manual Adjust</label>
            </value>
            <value>
                <fullName>Reverse_Consume</fullName>
                <label>Reverse Consume</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>